# hand_of_architect

./: .gitignore  CMakeLists.txt
hoaDataBase/: CMakeLists.txt
hoaDataBase/core/: hoaDataBase.cpp  hoaDataBase.h  hoaDataBaseGuard.cpp  hoaDataBaseGuard.h  hoaIRWFabrica.cpp  hoaIRWFabrica.h  hoaObject.cpp  hoaObject.h  hoaSimpleTextIR.cpp  hoaSimpleTextIR.h  hoaSimpleTextIRW.cpp  hoaSimpleTextIRW.h  hoaSimpleTextIW.cpp  hoaSimpleTextIW.h
hoaDraw/: CMakeLists.txt
hoaDraw/core/: hoaGraphicObject.h  hoaIDrawer.cpp  hoaIDrawer.h  hoaOpenGlDrawer.cpp  hoaOpenGlWindow.h  hoaSceneManager.cpp  hoaSceneManager.h  hoaTestGraphicObject.h
hoaMath/: CMakeLists.txt
hoaMath/core/: hoaPoint.h  hoaVector.cpp  hoaVector.h
hoaModel/: CMakeLists.txt
hoaModel/core/: hoaLine.cpp  hoaLine.h  hoaModel.cpp  hoaModel.h  hoaObject.cpp  hoaObject.h  hoaPlane.cpp  hoaPlane.h
hoaModel/core/hoaReaderWriter/: hoaIRW.cpp  hoaIRW.h
hoaOpenGlApp/: CMakeLists.txt  hoaOpenGlDrawer.h  hoaOpenGlWindow.cpp  hoaTestGraphicObject.cpp  main.cpp
hoaUnitTest/: CMakeLists.txt
hoaUnitTest/tests/: hoaDataBase_test.cpp
hoaView/: CMakeLists.txt
hoaView/src/: main.cpp
